--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "express-session": "^1.18.1",
+    "mongoose": "^8.9.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
